--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -9,6 +9,7 @@
     "com.unity.ide.rider": "3.0.25",
     "com.unity.ide.visualstudio": "2.0.18",
     "com.unity.ide.vscode": "1.2.5",
+    "com.unity.memoryprofiler": "1.0.0",
     "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.splines": "2.2.1",
     "com.unity.test-framework": "1.1.33",
